ocp/netflixoss/netflixoss-list.yaml
apiVersion: v1
kind: List
metadata: {}
items:
# Netflix Turbine Server
- apiVersion: v1
  kind: ImageStream
  metadata:
    labels:
      app: turbine-server
      group: netflix-oss
    name: turbine-server
  spec:
    dockerImageRepository: docker.io/siamaksade/turbine-server # temporary till fabric8 images remove privillegd requirement
    tags:
    - name: "1.0.27"
      annotations:
        description: Netflix Turbine Server
        version: "1.0.27"
- apiVersion: v1
  kind: DeploymentConfig
  metadata:
    labels:
      app: turbine-server
      group: netflix-oss
    name: turbine-server
  spec:
    replicas: 1
    selector:
      app: turbine-server
      group: netflix-oss
      deploymentconfig: turbine-server
    strategy:
      type: Recreate
    template:
      metadata:
        labels:
          app: turbine-server
          group: netflix-oss
          deploymentconfig: turbine-server
      spec:
        containers:
        - image: 'turbine-server'
          name: turbine-server
          ports:
          - containerPort: 8080
            protocol: TCP
          - containerPort: 8778
            protocol: TCP
          - containerPort: 9779
            protocol: TCP
          resources: {}
          terminationMessagePath: /dev/termination-log
          readinessProbe:
            failureThreshold: 10
            exec:
              command:
                - curl
                - '-f'
                - 'http://localhost:8080/health'
            initialDelaySeconds: 30
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 5
          livenessProbe:
            failureThreshold: 10
            exec:
              command:
                - curl
                - '-f'
                - 'http://localhost:8080/health'
            initialDelaySeconds: 60
            periodSeconds: 30
            successThreshold: 1
            timeoutSeconds: 5
          resources:
            limits:
              cpu: 1
              memory: 1500Mi
            requests:
              cpu: 100m
              memory: 256Mi
    triggers:
    - type: ConfigChange
    - imageChangeParams:
        automatic: true
        containerNames:
        - turbine-server
        from:
          kind: ImageStreamTag
          name: turbine-server:1.0.27
      type: ImageChange
  status:
    observedGeneration: 2
    replicas: 1
    unavailableReplicas: 1
    updatedReplicas: 1
- apiVersion: v1
  kind: Service
  metadata:
    labels:
      app: turbine-server
      group: netflix-oss
    name: turbine-server
  spec:
    ports:
    - name: 80-tcp
      port: 80
      protocol: TCP
      targetPort: 8080
    selector:
      app: turbine-server
      group: netflix-oss
      deploymentconfig: turbine-server
- apiVersion: v1
  kind: Route
  metadata:
    labels:
      app: turbine-server
      group: netflix-oss
    name: turbine-server
  spec:
    port:
      targetPort: 80-tcp
    to:
      kind: Service
      name: turbine-server
      weight: 100
# Netflix Hystrix Dashboard
- apiVersion: v1
  kind: ImageStream
  metadata:
    labels:
      app: hystrix-dashboard
      group: netflix-oss
    name: hystrix-dashboard
  spec:
    dockerImageRepository: docker.io/siamaksade/hystrix-dashboard # temporary till fabric8 images remove privillegd requirement
    tags:
    - name: "1.0.27"
      annotations:
        description: Netflix Hystrix Dashboard
        version: "1.0.27"
- apiVersion: v1
  kind: DeploymentConfig
  metadata:
    labels:
      app: hystrix-dashboard
      group: netflix-oss
    name: hystrix-dashboard
  spec:
    replicas: 1
    selector:
      app: hystrix-dashboard
      group: netflix-oss
      deploymentconfig: hystrix-dashboard
    strategy:
      type: Recreate
    template:
      metadata:
        labels:
          app: hystrix-dashboard
          group: netflix-oss
          deploymentconfig: hystrix-dashboard
      spec:
        containers:
        - image: 'hystrix-dashboard'
          name: hystrix-dashboard
          ports:
          - containerPort: 9779
            protocol: TCP
          - containerPort: 8080
            protocol: TCP
          - containerPort: 8778
            protocol: TCP
          resources: {}
          terminationMessagePath: /dev/termination-log
          readinessProbe:
            failureThreshold: 10
            exec:
              command:
                - curl
                - '-f'
                - 'http://localhost:8080'
            initialDelaySeconds: 30
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 5
          livenessProbe:
            failureThreshold: 10
            exec:
              command:
                - curl
                - '-f'
                - 'http://localhost:8080'
            initialDelaySeconds: 30
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 5
          resources:
            limits:
              cpu: 1
              memory: 1Gi
            requests:
              cpu: 100m
              memory: 256Mi
    triggers:
    - type: ConfigChange
    - imageChangeParams:
        automatic: true
        containerNames:
        - hystrix-dashboard
        from:
          kind: ImageStreamTag
          name: hystrix-dashboard:1.0.27
      type: ImageChange
- apiVersion: v1
  kind: Service
  metadata:
    labels:
      app: hystrix-dashboard
      group: netflix-oss
    annotations:
      service.alpha.openshift.io/dependencies: '[{"name":"turbine-server","namespace":"","kind":"Service"}]'
    name: hystrix-dashboard
  spec:
    ports:
    - name: 8080-tcp
      port: 8080
      protocol: TCP
      targetPort: 8080
    selector:
      app: hystrix-dashboard
      deploymentconfig: hystrix-dashboard
      group: netflix-oss
- apiVersion: v1
  kind: Route
  metadata:
    labels:
      app: hystrix-dashboard
      group: netflix-oss
    name: hystrix-dashboard
  spec:
    port:
      targetPort: 8080-tcp
    to:
      kind: Service
      name: hystrix-dashboard
      weight: 100
